--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.html
@@ -30,6 +30,45 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <th i18n><span (click)="openHelpDialog('Abdominal (umbigo)')">Abdominal (umbigo)</span></th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].abdomen2 | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].abdomen2 | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="abdomen2" #abdomen2="ngModel" [(ngModel)]="newEvaluation.abdomen2"
+                                    type="number">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th i18n><span (click)="openHelpDialog('Abdominal (cintura)')">Abdominal (cintura)</span>
+                            </th>
+                            <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
+                                {{evaluation[pointer-1].abdomen | number: '': locale}}</td>
+                            <td *ngIf="editPointer==1 && editAv">
+                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="pointer>=0 && editPointer!=0">
+                                {{evaluation[pointer].abdomen | number: '': locale}}</td>
+                            <td *ngIf="editPointer==0 && editAv">
+                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
+                                    type="number" (focus)="$event.target.select()">
+                            </td>
+                            <td *ngIf="addEval">
+                                <input name="abdomen" #abdomen="ngModel" [(ngModel)]="newEvaluation.abdomen"
+                                    type="number">
+                            </td>
+                        </tr>
+                        <tr>
                             <th i18n><span (click)="openHelpDialog('Cintura')">Cintura</span></th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
                                 {{evaluation[pointer-1].cintura | number: '': locale}}</td>
@@ -122,7 +161,7 @@
             <br />
             <hr />
             <div *ngIf="selectedEvaluation">
-                <div *ngIf="showChart">
+                <div *ngIf="showChart && maxPointer>0">
                     <div style="text-align: center; color: white;">
                         <div>
                             <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
