--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -12,6 +12,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        align-items: center;
         color: white;
         &-content{
             width: 100%;
@@ -83,6 +84,7 @@ em {
 
     .section-content{
         width: 425px !important;
+        margin: auto;
     }
 
     ::-webkit-scrollbar {
