--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -139,6 +139,11 @@
                             </td>
                             <td *ngIf="addEval">&nbsp;</td>
                         </tr>
+                        <tr>
+                            <td colspan="3">
+                                <small class="advise-sm" i18n>* Todas as medidas são em centimetros</small>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
 
