--- a/src/app/avaliation/componente-postural/componente-postural.component.scss
+++ b/src/app/avaliation/componente-postural/componente-postural.component.scss
@@ -57,7 +57,7 @@
     color: white !important;
   }
   .mat-tab-header-pagination-controls-enabled .mat-tab-header-pagination {
-    display: flex;
+    display: inline-block !important;
   }
 
 }
