--- a/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
+++ b/src/app/avaliation/CardioPulmunar/astrand-ryhming/astrand-ryhming.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <div class="section-content">
-            <h1 class="h1-title" i18n>Bicicleta - Astrand-Ryhming, (1954) - 6min</h1>
+            <h1 class="h1-title" i18n>Astrand-Ryhming (1954) - 6min</h1>
             <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="nafs" #nafs="ngModel" [ngModel]="newEvaluation.nafs">
                 <input type="hidden" name="altura" #altura="ngModel" [ngModel]="newEvaluation.altura">
@@ -28,7 +28,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th i18n><span (click)="openDialog('Carga Teste')">Carga Teste</span></th>
+                            <th i18n><span (click)="openDialog('Carga Teste')">Carga Teste <small>(Watt)</small></span></th>
                             <td *ngIf="pointer>=1 && !addEval && editPointer!=1">
                                 {{evaluation[pointer-1].carga | number: '': locale}}</td>
                             <td *ngIf="editPointer==1 && editAv">
