--- a/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
+++ b/src/app/avaliation/componente-morfologica/pdc/pdc.component.scss
@@ -54,6 +54,9 @@
   .mat-tab-header-pagination-controls-enabled .mat-tab-header-pagination {
     display: flex;
   }
+  .mat-tab-header-pagination {
+    display: unset !important;
+  }
 
 }
 
@@ -61,5 +64,8 @@
 @media only screen and (min-width: 768px) {
   .section-content{
     width: 520px !important;
+  }
+  ::ng-deep .mat-tab-header-pagination {
+    display: unset !important;
   }
 }
