--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,6 +64,10 @@ input[type=number] {
   .mat-select-arrow {
     color: whitesmoke !important;
   }
+  // Arrows
+  .mat-tab-header-pagination {
+    display: block !important;
+  }
   
 }
 
